test/Exercism.Analyzers.CSharp.IntegrationTests/Solutions/Errors/Exceptions/ThrowsNotImplementedException/Errors.cs
using System;

public static class Errors
{
    public static string Test()
    {
        throw new NotImplementedException("You need to implement this function.");
    }
}